fix swagger solicitar-no-abordo
